# OpenGLStudy

./: .gitmodules  CMakeLists.txt  DevelopeLog.md  README.md
Application/: CMakeLists.txt  MySpotLightComponent.cpp  MySpotLightComponent.h  main.cpp
Assert/Shaders/: Light.fs  default.fs  default.vs  text.vs  text2Din3D.vs
OpenGLStudy/: CMakeLists.txt  Camera.cpp  Camera.h  Input.cpp  Input.h  Material.h  Mesh.cpp  Mesh.h  MeshFactory.cpp  MeshFactory.h  Object.cpp  Object.h  Panel.cpp  Panel.h  Render.cpp  Render.h  RenderEnv.h  Shader.cpp  Shader.h  TextRender2D.cpp  TextRender2D.h  Texture.cpp  Texture.h  Time.h  Window.cpp  Window.h  main.cpp
OpenGLStudy/include/: Camera.h  Character.h  FileSystem.h  Material.h  Mesh.h  Register.h  Render.h  RenderEnv.h  Scene.h  Shader.h  Window.h
OpenGLStudy/include/Components/: BaseComponent.h  CameraComponent.h  IDComponent.h  LightComponent.h  MeshComponent.h  NameComponent.h  TransformComponent.h
OpenGLStudy/include/Entities/: BaseEntity.h
OpenGLStudy/include/Objects/: BaseObject.h
OpenGLStudy/include/Utils/: UUID.h
OpenGLStudy/src/: Camera.cpp  FileSystem.cpp  Input.cpp  RegisterTypes.cpp  Render.cpp  Scene.cpp  Shader.cpp  Time.cpp
OpenGLStudy/src/Components/: BaseComponent.cpp  CameraComponent.cpp  LightComponent.cpp  TransformComponent.cpp
OpenGLStudy/src/Entities/: BaseEntity.cpp
OpenGLStudy/src/Objects/: BaseObject.cpp
Tenet/: CMakeLists.txt
Tenet/include/: App.h  Character.h  FileSystem.h  Input.h  Material.h  Mesh.h  MeshFactory.h  Object.h  Panel.h  Register.h  Render.h  Scene.h  Shader.h  TextRender2D.h  Texture.h  Time.h  Window.h
Tenet/include/Components/: BaseComponent.h  CameraComponent.h  IDComponent.h  LightComponent.h  MeshComponent.h  NameComponent.h  TransformComponent.h
Tenet/include/Entities/: BaseEntity.h
Tenet/include/Utils/: UUID.h
Tenet/src/: FileSystem.cpp  Input.cpp  Material.cpp  Mesh.cpp  MeshFactory.cpp  Panel.cpp  Register.cpp  RegisterTypes.cpp  Render.cpp  Scene.cpp  Shader.cpp  TextRender2D.cpp  Texture.cpp  Time.cpp  Window.cpp
Tenet/src/Components/: BaseComponent.cpp  CameraComponent.cpp  LightComponent.cpp  MeshComponent.cpp  TransformComponent.cpp
Tenet/src/Entities/: BaseEntity.cpp
VulkanStudy/: CMakeLists.txt
